# test-cuda

cmake/: CMakeLists.txt
src/: kernel.cu  kernel.h  testcuda.cpp
